@@ -31,6 +31,7 @@ Fixed warnings generated by the Closure Compiler, thanks @steve-gh! (#170)
 Added untracked files which should be ignored to .gitignore (#173)
 Removed ads/sync.html (#182)
 Updated ads/async.html (#183)
+Added pageUnloadTimer option to argmap (#171)
 
 Version 1.0.1 (2014-04-09)
 --------------------------
